# ecv-sudoku

./: .gitmodules  CMakeLists.txt  README.md
src/: DynamicFontSizeLabel.cpp  DynamicFontSizeLabel.h  cell.cpp  cell.h  grid.cpp  grid.h  main.cpp  mainwindow.cpp  mainwindow.ui  op.cpp  op.h
